--- a/String Objects and list Objects/Python_assignment_2.ipynb
+++ b/String Objects and list Objects/Python_assignment_2.ipynb
@@ -1,1 +1,103 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a number : 10\n",
+      "\n",
+      "*\n",
+      "**\n",
+      "***\n",
+      "****\n",
+      "*****\n",
+      "****\n",
+      "***\n",
+      "**\n",
+      "*\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def pattern(n):\n",
+    "    for i in range(n+1):\n",
+    "        if i <= n/2:\n",
+    "            print(i*(\"*\"))\n",
+    "        else:\n",
+    "            print((10-i)*(\"*\"))\n",
+    "                    \n",
+    "number = int(input(\"Enter a number : \"))\n",
+    "pattern(number)\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Write a Python program to reverse a word after accepting the input from the user.\n",
+    "Sample Output:\n",
+    "Input word: ineuron\n",
+    "Output: norueni"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a word : ineuron\n",
+      "Input word: ineuron \n",
+      "The reversed word is :  norueni\n"
+     ]
+    }
+   ],
+   "source": [
+    "def reverse(word):\n",
+    "    return word[::-1]\n",
+    "word = input(\"Enter a word : \")\n",
+    "reversed_word = reverse(word)\n",
+    "print(\"Input word: {} \".format(word))\n",
+    "print(\"The reversed word is : \", reversed_word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
