--- a/String Objects and list Objects/Python_assignment_2.ipynb
+++ b/String Objects and list Objects/Python_assignment_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
     "        if i <= n/2:\n",
     "            print(i*(\"*\"))\n",
     "        else:\n",
-    "            print((10-i)*(\"*\"))\n",
+    "            print((n-i)*(\"*\"))\n",
     "                    \n",
     "number = int(input(\"Enter a number : \"))\n",
     "pattern(number)\n",
