--- a/Tuples,Set ,Dictionaries & Functions/Python_assignment_3.ipynb
+++ b/Tuples,Set ,Dictionaries & Functions/Python_assignment_3.ipynb
@@ -1,1 +1,93 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "210"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Write a Python program to sum all the items in a list. \n",
+    "lst = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]\n",
+    "from functools import reduce\n",
+    "reduce(lambda x,y: x+y,lst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Write a Python program to count the number of strings where the string length is 2 or\n",
+    "# more and the first and last character are same from a given list of strings. \n",
+    "\n",
+    "def string_fun(str1):\n",
+    "    flag =0\n",
+    "    if (len(str1)>=2) and (str1[0]==str1[len(str1)-1]):\n",
+    "        flag = 1\n",
+    "    return flag \n",
+    "        \n",
+    "str1 = 'tenete'\n",
+    "string_fun(str1)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
