--- a/Tuples,Set ,Dictionaries & Functions/Python_assignment_3.ipynb
+++ b/Tuples,Set ,Dictionaries & Functions/Python_assignment_3.ipynb
@@ -1,65 +1,187 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 12,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "210"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "#Write a Python program to sum all the items in a list. \n",
-    "lst = [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20]\n",
-    "from functools import reduce\n",
-    "reduce(lambda x,y: x+y,lst)"
+    "1.1 Write a Python Program to implement your own myreduce() function which works exactly  like Python's built-in function reduce()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "444"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Write a Python program to count the number of strings where the string length is 2 or\n",
-    "# more and the first and last character are same from a given list of strings. \n",
+    "#Python's built-in funtion reduce() implementation\n",
+    "# Defining max function returning the largest number from the list\n",
+    "def max(x,y):\n",
+    "    if x > y:\n",
+    "        return x\n",
+    "    else:\n",
+    "        return y\n",
     "\n",
-    "def string_fun(str1):\n",
-    "    flag =0\n",
-    "    if (len(str1)>=2) and (str1[0]==str1[len(str1)-1]):\n",
-    "        flag = 1\n",
-    "    return flag \n",
+    "#Defining the function my_reduce and the mathematical operation and list is passed as arguments\n",
+    "def my_reduce(my_func,lst):\n",
+    "    max_num = lst[0]\n",
+    "    for i in range(1,len(lst)):\n",
+    "        max_num = my_func(max_num,lst[i])\n",
     "        \n",
-    "str1 = 'tenete'\n",
-    "string_fun(str1)\n",
+    "    return max_num\n",
+    "\n",
+    "# Calling my_reduce function by passing the function name and list as arguments\n",
+    "my_reduce(max,[110,20,50,444,103,111,54,10,1,5])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1.2 Write a Python program to implement your own myfilter() function which works exactly  like Python's built-in function filter() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Python's built-in funtion filter() implementation\n",
+    "#Defining my_even() which returns the even number\n",
+    "def my_even(num):\n",
+    "    if num%2 ==0:\n",
+    "        return True\n",
+    "    else :\n",
+    "        return False\n",
+    "    \n",
+    "#Defining the my_filter function and passing the function my_even and list as arguments\n",
+    "def my_filter(my_func,lst):\n",
+    "    lst1 = []\n",
+    "    for i in lst:\n",
+    "        num = my_func(i)\n",
+    "        if num:\n",
+    "            lst1.append(i)\n",
+    "    return lst1\n",
+    "\n",
+    "#Calling my_filter function\n",
+    "my_filter(my_even,[1,2,3,4,5,6,7,8,9,10])\n",
     "    "
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "2. Implement List comprehensions to produce the following lists.  \n",
+    "Write List comprehensions to produce the following Lists \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['x', 'xx', 'xxx', 'xxxx', 'y', 'yy', 'yyy', 'yyyy', 'z', 'zz', 'zzz', 'zzzz']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#['x', 'xx', 'xxx', 'xxxx', 'y', 'yy', 'yyy', 'yyyy', 'z', 'zz', 'zzz', 'zzzz']  \n",
+    "[j*i for i in ['x','y','z'] for j in range(1,5)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['x', 'y', 'z', 'xx', 'yy', 'zz', 'xxx', 'yyy', 'zzz', 'xxxx', 'yyyy', 'zzzz']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#['x', 'y', 'z', 'xx', 'yy', 'zz', 'xxx', 'yyy', 'zzz', 'xxxx', 'yyyy', 'zzzz']\n",
+    "[j*i for i in range(1,5)  for j in ['x','y','z']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[2], [3], [4], [3], [4], [5], [4], [5], [6]]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#[[2], [3], [4], [3], [4], [5], [4], [5], [6]] \n",
+    "[[x+y] for x in range(2,5) for y in range(3)]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[2, 3, 5, 6], [3, 4, 6, 7], [4, 5, 7, 8], [5, 6, 8, 9]]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#[[2, 3, 4, 5], [3, 4, 5, 6], [4, 5, 6, 7], [5, 6, 7, 8]] \n",
+    "[[i,i+1,i+3,i+4] for i in range(2,6)]\n"
+   ]
   },
   {
    "cell_type": "code",
