--- a/exception_handling/Exception_handling.ipynb
+++ b/exception_handling/Exception_handling.ipynb
@@ -1,1 +1,92 @@
-
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. Write a function to compute 5/0 and use try/except to catch the exceptions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def div(n):\n",
+    "    try:\n",
+    "        return n/0\n",
+    "    except:\n",
+    "        print(\"ZeroDivisionError: division by zero\")\n",
+    "a = div(5)\n",
+    "a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Implement a Python program to generate all sentences where subject is in\n",
+    "[\"Americans\", \"Indians\"] and verb is in [\"Play\", \"watch\"] and the object is in\n",
+    "[\"Baseball\",\"cricket\"].\n",
+    "Hint: Subject,Verb and Object should be declared in the program as shown below.\n",
+    "subjects=[\"Americans \",\"Indians\"]\n",
+    "verbs=[\"play\",\"watch\"]\n",
+    "objects=[\"Baseball\",\"Cricket\"]\n",
+    "Output should come as below:\n",
+    "Americans play Baseball.\n",
+    "Americans play Cricket.\n",
+    "Americans watch Baseball.\n",
+    "Americans watch Cricket.\n",
+    "Indians play Baseball.\n",
+    "Indians play Cricket.\n",
+    "Indians watch Baseball.\n",
+    "Indians watch Cricket."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "subjects=[\"Americans \",\"Indians\"]\n",
+    "verbs=[\"play\",\"watch\"]\n",
+    "objects=[\"Baseball\",\"Cricket\"]\n",
+    "\n",
+    "for sub in subjects:\n",
+    "    for ver in verbs:\n",
+    "        for obj in objects:\n",
+    "            print(sub+\" \"+ver+\" \"+obj+\".\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
+}
