--- a/exception_handling/Exception_handling.ipynb
+++ b/exception_handling/Exception_handling.ipynb
@@ -9,9 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ZeroDivisionError: division by zero\n"
+     ]
+    }
+   ],
    "source": [
     "def div(n):\n",
     "    try:\n",
@@ -46,9 +54,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Americans  play Baseball.\n",
+      "Americans  play Cricket.\n",
+      "Americans  watch Baseball.\n",
+      "Americans  watch Cricket.\n",
+      "Indians play Baseball.\n",
+      "Indians play Cricket.\n",
+      "Indians watch Baseball.\n",
+      "Indians watch Cricket.\n"
+     ]
+    }
+   ],
    "source": [
     "subjects=[\"Americans \",\"Indians\"]\n",
     "verbs=[\"play\",\"watch\"]\n",
